--- a/.env.sample
+++ b/.env.sample
@@ -8,3 +8,10 @@ DB_HOST=
 DB_PORT=
 
 STRIPE_API_KEY=
+
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
+EMAIL_USE_TLS=
+EMAIL_USE_SSL=
