--- a/.env.sample
+++ b/.env.sample
@@ -7,6 +7,13 @@ DB_PASSWORD=
 DB_HOST=
 DB_PORT=
 
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+#POSTGRES_HOST=
+POSTGRES_HOST=
+POSTGRES_PORT=
+
 STRIPE_API_KEY=
 
 EMAIL_HOST=
