--- a/.env.sample
+++ b/.env.sample
@@ -1,20 +1,15 @@
 SECRET_KEY=
 
-DB_ENGINE=
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
-DB_HOST=
-DB_PORT=
-
 POSTGRES_DB=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
-#POSTGRES_HOST=
 POSTGRES_HOST=
 POSTGRES_PORT=
 
 STRIPE_API_KEY=
+
+CELERY_BROKER_URL=
+CELERY_RESULT_BACKEND=
 
 EMAIL_HOST=
 EMAIL_PORT=
